# python-fastapi

./: .gitignore  CNAME  Procfile  README.md  _config.yml  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt  runserver.py  runserver.sh
alembic/: env.py
alembic/versions/: 72dba5f82c5e_2022_06_18_18_29_04_414390.py  b95bc8b9a383_primeira_migração.py  d85906452f14_2022_06_19_09_23_14_066301.py
contrib/: example.env  initial_confg_generator.py
v1/: database.py  dependencies.py  main.py  settings.py
v1/crud/: poll.py  todo.py
v1/models/: __init__.py  poll.py  todo.py
v1/routers/: ajax.py  convert_text.py  home.py  poll.py  todo.py
v1/schemas/: ajax.py  poll.py  todo.py
v1/static/ajax/js/: ajax-axios.js  ajax-brython.py  ajax-fetch.js  ajax-jquery.js  ajax-jsxmlhttprequest.js
v1/static/base/js/: close-alert-min.js  close-alert.js
v1/static/convert-text/js/: main.js
v1/templates/ajax/: axios.html  brython.html  fetch.html  jquery.html  jsxmlhttprequest.html
v1/templates/base/: base.html
v1/templates/base/components/: alert-error.html  alert-success.html  footer.html  google.html  navbar.html
v1/templates/convert-text/: index.html
v1/templates/home/: index.html
