[tool.poetry]
name = "python-fastapi"
version = "0.1.0"
description = "Repositório criado para documentar e centralizar conteúdos, dicas, tutoriais e exemplos de código sobre a construção de APIs com a linguagem de programação Python e o framework web FastAPI."
authors = ["Renato Cruz <zkpcvm6dz@mozmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://fastapi.justcode.com.br/"
repository = "https://github.com/natorsc/python-fastapi"
documentation = "https://github.com/natorsc/python-fastapi"
keywords = ["python", "fastapi", "web", "API"]

classifiers = [
    "Framework :: FastAPI",
    "Environment :: Web Environment",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/natorsc/python-fastapi/issues"
"Blog" = "https://blog.justcode.com.br/series/python-e-fastapi"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = { extras = ["all"], version = "^0.78.0" }
SQLAlchemy = "^1.4.37"
alembic = "^1.8.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
